@@ -1,10 +1,11 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" 
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>fr.ign.validator</groupId>
 	<artifactId>validator</artifactId>
 	<packaging>pom</packaging>
-	<version>3.4.5-SNAPSHOT</version>
+	<version>4.0.0-SNAPSHOT</version>
 	<name>Validator</name>
 
 	<scm>
@@ -15,24 +16,25 @@
 
 	<description>
         This program validates data according to a FeatureCatalogue
-    </description>
+	</description>
 
 	<properties>
-		<jdk.version>1.7</jdk.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<!-- 
-		14.5 is the last supported version for java 7
+		<java.version>11</java.version>
+		<!--
 		See following page for the required java version
 		http://docs.geotools.org/latest/userguide/build/install/jdk.html#
 		 -->
-		<geotools.version>14.5</geotools.version>
-		<log4j.version>2.8.2</log4j.version>
-		<jackson.version>2.9.7</jackson.version>
-                <postgresql.version>9.1-901-1.jdbc4</postgresql.version>
+		<geotools.version>21.2</geotools.version>
+		<log4j.version>2.12.0</log4j.version>
+		<!-- TODO keep an eye on 2.10.0 -->
+		<jackson.version>2.9.9</jackson.version>
+		<jackson.databind.version>2.9.9.1</jackson.databind.version>
+		<postgresql.version>9.1-901-1.jdbc4</postgresql.version>
 	</properties>
 
 	<organization>
-		<name>Service SAI, IGN</name>
+		<name>IGN - Service RDS</name>
 		<url>http://www.ign.fr</url>
 	</organization>
 
@@ -97,7 +99,7 @@
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-databind</artifactId>
-			<version>${jackson.version}</version>
+			<version>${jackson.databind.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
@@ -121,14 +123,14 @@
 		<dependency>
 			<groupId>jaxen</groupId>
 			<artifactId>jaxen</artifactId>
-			<version>1.1.6</version>
+			<version>1.2.0</version>
 		</dependency>
 
 		<!-- Apache common-io -->
 		<dependency>
 			<groupId>commons-io</groupId>
 			<artifactId>commons-io</artifactId>
-			<version>1.3.2</version>
+			<version>2.6</version>
 		</dependency>
 
 		<!-- Apache common cli -->
@@ -142,7 +144,7 @@
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-csv</artifactId>
-			<version>1.0</version>
+			<version>1.7</version>
 		</dependency>
 
 		<!-- org.apache.commons.lang -->
@@ -186,25 +188,18 @@
 			<version>2.1</version>
 		</dependency>
 
-		<!-- jackson JTS -->
-		<dependency>
-			<groupId>com.bedatadriven</groupId>
-			<artifactId>jackson-datatype-jts</artifactId>
-			<version>2.4</version>
-		</dependency>
-
 		<!-- junit -->
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>4.11</version>
+			<version>4.12</version>
 			<scope>test</scope>
 		</dependency>
 
 		<dependency>
 			<groupId>org.xmlunit</groupId>
 			<artifactId>xmlunit-core</artifactId>
-			<version>2.2.0</version>
+			<version>2.6.3</version>
 			<scope>test</scope>
 		</dependency>
 
@@ -212,23 +207,23 @@
 		<dependency>
 			<groupId>org.mockito</groupId>
 			<artifactId>mockito-core</artifactId>
-			<version>2.11.0</version>
+			<version>3.0.0</version>
 			<scope>test</scope>
 		</dependency>
-	
+
 		<!-- JSONAssert -->
 		<dependency>
-		    <groupId>org.skyscreamer</groupId>
-		    <artifactId>jsonassert</artifactId>
-		    <version>1.5.0</version>
-		    <scope>test</scope>
+			<groupId>org.skyscreamer</groupId>
+			<artifactId>jsonassert</artifactId>
+			<version>1.5.0</version>
+			<scope>test</scope>
 		</dependency>
 
-	    <!-- Driver SQLite -->
+		<!-- Driver SQLite -->
 		<dependency>
 			<groupId>org.xerial</groupId>
 			<artifactId>sqlite-jdbc</artifactId>
-			<version>3.8.10.1</version>
+			<version>3.28.0</version>
 		</dependency>
 
 		<!-- Drive postgresql -->
@@ -236,6 +231,23 @@
 		    <groupId>postgresql</groupId>
 		    <artifactId>postgresql</artifactId>
 		    <version>${postgresql.version}</version>
+		</dependency>
+
+		<!-- JDK 8 libraries -->
+		<dependency>
+			<groupId>javax.annotation</groupId>
+			<artifactId>javax.annotation-api</artifactId>
+			<version>1.3.2</version>
+		</dependency>
+		<dependency>
+			<groupId>javax.xml.bind</groupId>
+			<artifactId>jaxb-api</artifactId>
+			<version>2.4.0-b180830.0359</version>
+		</dependency>
+		<dependency>
+			<groupId>org.glassfish.jaxb</groupId>
+			<artifactId>jaxb-runtime</artifactId>
+			<version>2.4.0-b180830.0438</version>
 		</dependency>
 	</dependencies>
 
@@ -262,9 +274,10 @@
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-compiler-plugin</artifactId>
+					<version>3.8.0</version>
 					<configuration>
-						<source>${jdk.version}</source>
-						<target>${jdk.version}</target>
+						<source>${java.version}</source>
+						<target>${java.version}</target>
 					</configuration>
 				</plugin>
 
@@ -278,16 +291,18 @@
 				</plugin>
 			</plugins>
 		</pluginManagement>
-    <plugins>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-surefire-plugin</artifactId>
-        <version>2.22.1</version>
-        <configuration>
-            <useSystemClassLoader>false</useSystemClassLoader>
-        </configuration>
-      </plugin>
-    </plugins>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.22.1</version>
+				<configuration>
+					<useSystemClassLoader>false</useSystemClassLoader>
+					<argLine> --illegal-access=permit
+					</argLine>
+				</configuration>
+			</plugin>
+		</plugins>
 	</build>
 
 </project>
